# try-openslide

./: CMakeLists.txt  README.md
